PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2016 PHP 7.0.2

- Mbstring:
  . Fixed bug #71066 (mb_send_mail: Program terminated with signal SIGSEGV,
    Segmentation fault). (Laruence)

- Filter:
  . Fixed bug #71063 (filter_input(INPUT_ENV, ..) does not work). (Reeze Xia)


?? ??? 2015, PHP 7.0.1

- Core:
  . Fixed bug #70831 (Compile fails on system with 160 CPUs).
    (Daniel Axtens)
  . Fixed bug #71006 (symbol referencing errors on Sparc/Solaris). (Dmitry)
  . Fixed bug #70997 (When using parentClass:: instead of parent::, static
    context changed). (Dmitry)
  . Fixed bug #70970 (Segfault when combining error handler with output
    buffering). (Laruence)
  . Fixed bug #70967 (Weird error handling for __toString when Error is
    thrown). (Laruence)
  . Fixed bug #70958 (Invalid opcode while using ::class as trait method
    paramater default value). (Laruence)
  . Fixed bug #70944 (try{ } finally{} can create infinite chains of
    exceptions). (Laruence)
  . Fixed bug #70931 (Two errors messages are in conflict). (dams, Laruence)
  . Fixed bug #70904 (yield from incorrectly marks valid generator as finished).
    (Bob)
  . Fixed bug #70899 (buildconf failure in extensions). (Bob, Reeze)
  . Fixed bug #61751 (SAPI build problem on AIX: Undefined symbol:
    php_register_internal_extensions). (Lior Kaplan)
  . Fixed \int (or generally every scalar type name with leading backslash)
    to not be accepted as type name. (Bob)
  . Fixed exception not being thrown immediately into a generator yielding
    from an array. (Bob)
  . Fixed bug #70987 (static::class within Closure::call() causes segfault).
    (Andrea)
  . Fixed bug #71013 (Incorrect exception handler with yield from). (Bob)
  . Fixed double free in error condition of format printer. (Bob)

- CLI server:
  . Fixed bug #71005 (Segfault in php_cli_server_dispatch_router()). (Adam)
